syntax="proto3";
option go_package="https://github.com/Sean04111/chat_gRPC";
package chat;
message User{
  int64 id = 1;
  string name = 2;
}
message UserId{
  int64 id = 1;
}
message Message{
  User speaker = 1;
  string message = 2;
}
message MainChatList{
  repeated Message MainChatList = 1;
}
service MainChat{
  rpc SendAll(stream Message)returns(MainChatList);
}
